Added Le Wagon's logo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head></head>
   <body>
+    <img src="timg.jpeg" alt=""style="width:200.4px;height:76.8px"/>
     <h1>Coming soon...Le Wagon</h1>
   </body>
 </html>
