Centered image and tagline

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
-    <img src="timg.jpeg" alt=""style="width:200.4px;height:76.8px"/>
-    <h1>Coming soon...Le Wagon</h1>
+    <div id="container">
+      <img id="logo" src="timg.jpeg" alt="">
+        <h1>Coming soon...Le Wagon</h1>
+    </div>
   </body>
 </html>
+
